tests/NormalTests/paczka2/big_fuzzy/10217040.err
Error in line 1: 0bcF8NUQIa S310 34,4
Error in line 7: DZJ S310 59,4
Error in line 2: ILRCJR A775 51,0
Error in line 20: aoJNyR S310 41,9
Error in line 31: A775 A775 87,6
Error in line 41: LTOt1M S310 59,5
Error in line 49: Abxtfj S58 33,7
Error in line 55: Abxtfj A775 67,2
Error in line 66: DZJ A332 15,5
Error in line 71: A775 A775 24,6
Error in line 82: ILRCJR A332 95,2
Error in line 84: ILRCJR S58 59,1
Error in line 97: A775 A332 63,5
Error in line 88: 0bcF8NUQIa A332 9,1
Error in line 95: ILRCJR S310 67,1
Error in line 98: aoJNyR S58 2,2
Error in line 108: LTOt1M A775 86,0
Error in line 121: Abxtfj S310 1,8
Error in line 124: A775 S58 19,3
Error in line 122: Abxtfj A332 92,5
Error in line 138: aoJNyR A332 50,6
Error in line 137: ILRCJR A332 158,5
Error in line 140: aoJNyR S310 71,1
Error in line 152: aoJNyR A775 46,2
Error in line 150: 0bcF8NUQIa A775 94,7
Error in line 175: aoJNyR A775 61,4
Error in line 178: DZJ A775 18,0
Error in line 181: DZJ A332 19,3
Error in line 191: A775 S310 802,6
Error in line 193: 0bcF8NUQIa A775 4,2
Error in line 195: ILRCJR A332 94,7
Error in line 218: aÏJNyR A332 7,3
Error in line 204: aoJNyR A775 72,9
Error in line 223: DZJ A775 47,5
Error in line 224: A775 A332 95,0
Error in line 233: A775 S310 69,5
Error in line 232: aoJNyR A332 74,0
